--- a/src/App.css
+++ b/src/App.css
@@ -132,8 +132,8 @@ ul li::before {
 }
 
 button {
-  margin-bottom: 2px;
-  margin-top: auto;
+  margin-bottom: 20px;
+  /* margin-top: auto; */
   color: black;
   border-radius: 5px;
   padding: 5px;
@@ -153,7 +153,7 @@ button {
 }
 
 .CartBtn {
-  height: 30px;
+  height: 60px;
   align-content: center;
   display: flex;
   justify-content: space-around;
